add roles group api and remove models.Role.Name unique index
